# secop-rs

./: .gitignore  Cargo.toml  README.md  bench.py  test.cfg
core/: Cargo.toml
core/src/: client.rs  config.rs  errors.rs  lib.rs  module.rs  proto.rs  server.rs  types.rs
derive/: Cargo.toml
derive/src/: lib.rs  module.rs  typedesc.rs  typeinfo.rs
modules/: Cargo.toml
modules/src/: cryo.rs  lib.rs  serial.rs  simcryo.rs  tcp.rs  toellner.rs
modules/src/support/: comm.rs  mod.rs
secop-derive/: Cargo.toml
secop-derive/src/: lib.rs  module.rs  typedesc.rs
src/: config.rs  errors.rs  handler.rs  main.rs  message.rs  module.rs  proto.rs  server.rs  types.rs  util.rs
src/play/: cryo.rs  mod.rs
src/proto/: mod.rs
src/server/: handler.rs  mod.rs
