[workspace]

[package]
name = "secop"
version = "0.1.2"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>",
           "Enrico Faulhaber <enrico.faulhaber@frm2.tum.de>"]
edition = "2018"
description = "A Rust framework for a hardware server speaking the SECoP protocol"
keywords = ["scada", "secop", "hardware", "sample-environment"]
license = "GPL-2.0+"
repository = "https://github.com/birkenfeld/secop-rs"

[dependencies]
log = "0.4.8"
clap = "2.33.0"
mlzlog = "0.7.0"
mlzutil = "0.2.0"
daemonize = "0.4.1"
signal-hook = "0.3.8"
structopt = "0.3.2"

[dependencies.secop-core]
path = "core"

[dependencies.secop-modules]
path = "modules"
