[package]
name = "secop-core"
version = "0.1.1"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>",
           "Enrico Faulhaber <enrico.faulhaber@frm2.tum.de>"]
edition = "2018"

[dependencies]
log = "0.4"
url = "2.1"
time = "0.1"
toml = "0.5"
base64 = "0.10"
regex = "1.0"
memchr = "2.1"
mlzlog = "0.5"
mlzutil = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.2"
derive-new = "0.5"
crossbeam-channel = "0.3"
hashbrown = { version = "0.6", features = ["serde"] }
parking_lot = { version = "0.9", features = ["nightly"] }

[dependencies.secop-derive]
path = "../derive"
