[package]
name = "secop-derive"
version = "0.1.2"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
edition = "2018"
description = "A Rust framework for a hardware server speaking the SECoP protocol (derive package)"
keywords = ["scada", "secop", "hardware", "sample-environment"]
license = "GPL-2.0+"
repository = "https://github.com/birkenfeld/secop-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.5"
quote = "1.0.2"
syn = "1.0.5"
synstructure = "0.12.1"
darling = "0.13.0"
