[package]
name = "secop-modules"
version = "0.1.1"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>",
           "Enrico Faulhaber <enrico.faulhaber@frm2.tum.de>"]
edition = "2018"

[dependencies]
log = "0.4"
mlzlog = "0.4"
mlzutil = "0.1"
serde_json = "1.0"
lazy_static = "1.2"
parking_lot = "0.6"

[dependencies.secop-core]
path = "../core"

[dependencies.secop-derive]
path = "../derive"
